@@ -1,3 +1,6 @@
+09/29/17
+  -Rewrote reply parser to handle bit/bool arrays
+
 06/06/17
   -Specify max timeout when discovering devices
   
